# vala-cmake-example

./: .gitignore  .travis.yml  .uncrustify.vala.cfg  CMakeLists.txt  COPYING  README.md  autogen.sh  build.sh  clean.sh  find_tests.pl  readme.md
cmake/: FindGLib.cmake  FindGObjectIntrospection.cmake  FindVala.cmake  FindValadoc.cmake  UseVala.cmake  UseValadoc.cmake
cmake/vala/: UseVala.cmake
executables/: CMakeLists.txt  main.vala
gui/: CMakeLists.txt  gui.vala
gui/resources/: main-window.ui
my-project/: CMakeLists.txt  config.vala.in  my_class.vala
po/: CMakeLists.txt
src_lib/: CMakeLists.txt  config.vala.in  my-project.pc.in  my_class.vala
src_main/: CMakeLists.txt  main.vala
tests/: CMakeLists.txt  test_case.vala  test_main.vala  test_my_class.vala
